Refactor the styles for mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,36 +32,88 @@ body {
 }
 
 .container {
-  min-width: 95%;
-  max-width: 23.4375em;
+  align-items: center;
 }
 
 .storage__container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  height: 370px;
 }
 
 .storage__item {
-  padding: 2em;
   background-color: var(--dark-blue);
-  border-radius: 0.7em;
+  padding: 1em 3em;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: flex-start;
+  border-radius: 10px;
+}
+
+.storage__item:first-child {
+  padding-top: 2em;
+  padding-bottom: 2em;
+  border-top-right-radius: 100px;
+  height: 200px;
+}
+
+.storage__item:last-child {
+  height: 150px;
+}
+
+.storage-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 170px;
 }
 
 .storage-actions img {
-  min-width: 4em;
-  min-height: 4em;
-  max-width: 4em;
-  max-height: 4em;
+  background-color: var(--very-dark-blue);
+  padding: 1em 0.8em;
+  border-radius: 8px;
 }
 
-.storage-actions > * {
-  background-color: var(--very-dark-blue);
-  padding: 1em;
-  border-radius: 0.5em;
+.storage-actions img:first-child {
+  padding: 0.9em 0.95em;
+}
+
+.storage-actions img:last-child {
+  padding: 1.14em 0.8em;
+}
+
+.container-used-space {
+  position: relative;
+}
+
+.space-left {
+  position: absolute;
+  bottom: -35px;
+  left: 20%;
+  display: flex;
+  justify-content: baseline;
+  align-items: center;
+  padding: 1.2em 2em;
+  background-color: #fff;
+  color: var(--grayish-blue);
+  font-weight: bold;
+  border-radius: 10px;
+}
+
+.space-left .text-bold {
+  color: #000;
+  font-size: 40px;
+  padding-right: 0.2em;
+}
+
+/* Utilities */
+.text-bold {
+  font-weight: bold;
+}
+
+.text-center {
+  text-align: center;
 }
 
 /* Footer */
