Added the storage indicator background.

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,13 @@ body {
   position: relative;
 }
 
+.storage__indicator {
+  width: 100%;
+  height: 20px;
+  background-color: var(--very-dark-blue);
+  border-radius: 50px;
+}
+
 .space-left {
   position: absolute;
   bottom: -35px;
