--- a/css/styles.css
+++ b/css/styles.css
@@ -87,11 +87,38 @@ body {
   position: relative;
 }
 
+.storage__indicator-container {
+  width: 100%;
+}
+
 .storage__indicator {
+  position: relative;
   width: 100%;
   height: 20px;
   background-color: var(--very-dark-blue);
   border-radius: 50px;
+}
+
+.storage__indicator::before {
+  content: "";
+  position: absolute;
+  width: 78%;
+  height: 14px;
+  border-radius: 50px;
+  top: 3px;
+  left: 2px;
+  background-image: linear-gradient(to right, var(--light-red), var(--pink));
+}
+
+.storage__indicator::after {
+  content: '';
+  width: 10px;
+  height: 10px;
+  top: 5px;
+  right: 50px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
 }
 
 .space-left {
